adding field-based sensitivity and changing the way array sensitivity is implemented